Make link transitions more pleasant, and fix dark mode colors

--- a/src/global.css
+++ b/src/global.css
@@ -73,7 +73,9 @@
     background-position: 0 100%;
     background-repeat: repeat-x;
     background-size: 2px 2px;
-    transition: background-size 0.15s ease-out;
+    transition:
+        background-size 0.15s var(--ease-out),
+        color 0.3s var(--ease-out);
     text-decoration: none;
 
     .prose & {
@@ -88,7 +90,9 @@
         background-position: 0 100%;
         background-repeat: repeat-x;
         background-size: 2px 2px;
-        transition: background-size 0.15s ease-out;
+        transition:
+            background-size 0.15s var(--ease-out),
+            color 0.3s var(--ease-out);
         text-decoration: none;
     }
 
@@ -137,6 +141,10 @@
 
 .dark .link {
     color: white;
+
+    &:hover {
+        color: black;
+    }
 }
 
 .prose a {
